[gd_scene load_steps=13 format=2]

[ext_resource path="res://Prefabs/time.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Numbers/Column1/0.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Numbers/Column2/0.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Numbers/Column3/9.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Numbers/Column4/5.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Fonts/small_pixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Graphics/Numbers/colon.png" type="Texture" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite

var numbers = {
	\"0\":load(\"res://Graphics/Numbers/Column1/0.png\"),
	\"1\":load(\"res://Graphics/Numbers/Column1/1.png\"),
	\"2\":load(\"res://Graphics/Numbers/Column1/2.png\"),
	\"3\":load(\"res://Graphics/Numbers/Column1/3.png\"),
	\"4\":load(\"res://Graphics/Numbers/Column1/4.png\"),
	\"5\":load(\"res://Graphics/Numbers/Column1/5.png\"),
	\"6\":load(\"res://Graphics/Numbers/Column1/6.png\"),
	\"7\":load(\"res://Graphics/Numbers/Column1/7.png\"),
	\"8\":load(\"res://Graphics/Numbers/Column1/8.png\"),
	\"9\":load(\"res://Graphics/Numbers/Column1/9.png\")
}

const MAX_SHAKE_X = 10
const MAX_SHAKE_Y = 10

var trauma = 0

func _ready():
	pass
	
func _process(delta):
	
	if(trauma > 0):
		trauma -= delta
	else:
		trauma = 0
		
	offset = Vector2(MAX_SHAKE_X*(1 - randf()*2), MAX_SHAKE_Y*(1 - randf()*2)) * trauma*trauma

func set_number(number : String):
	if(not(texture == numbers[number])):
		texture = numbers[number]
	
		trauma = 0.5
	
	#do a little shake here"

[sub_resource type="GDScript" id=2]
script/source = "extends Sprite

var numbers = {
	\"0\":load(\"res://Graphics/Numbers/Column2/0.png\"),
	\"1\":load(\"res://Graphics/Numbers/Column2/1.png\"),
	\"2\":load(\"res://Graphics/Numbers/Column2/2.png\"),
	\"3\":load(\"res://Graphics/Numbers/Column2/3.png\"),
	\"4\":load(\"res://Graphics/Numbers/Column2/4.png\"),
	\"5\":load(\"res://Graphics/Numbers/Column2/5.png\"),
	\"6\":load(\"res://Graphics/Numbers/Column2/6.png\"),
	\"7\":load(\"res://Graphics/Numbers/Column2/7.png\"),
	\"8\":load(\"res://Graphics/Numbers/Column2/8.png\"),
	\"9\":load(\"res://Graphics/Numbers/Column2/9.png\")
}

const MAX_SHAKE_X = 10
const MAX_SHAKE_Y = 10

var trauma = 0

func _ready():
	pass
	
func _process(delta):
	
	if(trauma > 0):
		trauma -= delta
	else:
		trauma = 0
		
	offset = Vector2(MAX_SHAKE_X*(1 - randf()*2), MAX_SHAKE_Y*(1 - randf()*2)) * trauma*trauma

func set_number(number : String):
	if(not(texture == numbers[number])):
		texture = numbers[number]
	
		trauma = 0.5
	
	#do a little shake here"

[sub_resource type="GDScript" id=3]
script/source = "extends Sprite

var numbers = {
	\"0\":load(\"res://Graphics/Numbers/Column3/0.png\"),
	\"1\":load(\"res://Graphics/Numbers/Column3/1.png\"),
	\"2\":load(\"res://Graphics/Numbers/Column3/2.png\"),
	\"3\":load(\"res://Graphics/Numbers/Column3/3.png\"),
	\"4\":load(\"res://Graphics/Numbers/Column3/4.png\"),
	\"5\":load(\"res://Graphics/Numbers/Column3/5.png\"),
	\"6\":load(\"res://Graphics/Numbers/Column3/6.png\"),
	\"7\":load(\"res://Graphics/Numbers/Column3/7.png\"),
	\"8\":load(\"res://Graphics/Numbers/Column3/8.png\"),
	\"9\":load(\"res://Graphics/Numbers/Column3/9.png\")
}

const MAX_SHAKE_X = 10
const MAX_SHAKE_Y = 10

var trauma = 0

func _ready():
	pass
	
func _process(delta):
	
	if(trauma > 0):
		trauma -= delta
	else:
		trauma = 0
		
	offset = Vector2(MAX_SHAKE_X*(1 - randf()*2), MAX_SHAKE_Y*(1 - randf()*2)) * trauma*trauma

func set_number(number : String):
	if(not(texture == numbers[number])):
		texture = numbers[number]
	
		trauma = 0.5
	
	#do a little shake here"

[sub_resource type="GDScript" id=4]
script/source = "extends Sprite

var numbers = {
	\"0\":load(\"res://Graphics/Numbers/Column4/0.png\"),
	\"1\":load(\"res://Graphics/Numbers/Column4/1.png\"),
	\"2\":load(\"res://Graphics/Numbers/Column4/2.png\"),
	\"3\":load(\"res://Graphics/Numbers/Column4/3.png\"),
	\"4\":load(\"res://Graphics/Numbers/Column4/4.png\"),
	\"5\":load(\"res://Graphics/Numbers/Column4/5.png\"),
	\"6\":load(\"res://Graphics/Numbers/Column4/6.png\"),
	\"7\":load(\"res://Graphics/Numbers/Column4/7.png\"),
	\"8\":load(\"res://Graphics/Numbers/Column4/8.png\"),
	\"9\":load(\"res://Graphics/Numbers/Column4/9.png\")
}

const MAX_SHAKE_X = 10
const MAX_SHAKE_Y = 10

var trauma = 0

func _ready():
	pass
	
func _process(delta):
	
	if(trauma > 0):
		trauma -= delta
	else:
		trauma = 0
		
	offset = Vector2(MAX_SHAKE_X*(1 - randf()*2), MAX_SHAKE_Y*(1 - randf()*2)) * trauma*trauma

func set_number(number : String):
	if(not(texture == numbers[number])):
		texture = numbers[number]
	
		trauma = 0.5
	
	#do a little shake here"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 6 )

[node name="time" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )

[node name="num1" type="Sprite" parent="."]
position = Vector2( 942, 380 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
script = SubResource( 1 )

[node name="num2" type="Sprite" parent="."]
position = Vector2( 910, 378 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
script = SubResource( 2 )

[node name="num3" type="Sprite" parent="."]
position = Vector2( 864, 376 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
script = SubResource( 3 )

[node name="num4" type="Sprite" parent="."]
position = Vector2( 824, 380 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
script = SubResource( 4 )

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 0.505882, 0.356863, 0.25098, 1 )
margin_left = 823.0
margin_top = 364.0
margin_right = 915.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 5 )
text = "00:00"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 888, 378 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

